A bit of cleanup